# kairoscope

./: .gitignore  .pre-commit-config.yaml  ADDENDUM.md  Makefile  README.md  kairoscope.db  kairoscope.key  kairoscope.pub  policy.yaml  pyproject.toml  test_doc.txt
docs/: CADENCE.md  CHANGELOG.md  DEBUG_SESSION_2025-10-25_FOLLOWUP.md  INDUSTRY_PATH.md  KAIROSCOPE_NEXT_STEPS_2025-11-29.md  PROJECT_OVERVIEW_AND_NEXT_STEPS.md  SESSION_LOG_2025-11-29.md  hardware-keystores-surface-scan.md  key-manager-architecture.md
docs/architecture/: FTS5_vs_LLM.md
docs/logs/: DEBUG_REPORT_2025-10-25.md  SESSION_LOG_2025-12-03.md  TESTING_SESSION_2025-11-29.md
docs/strategy/: SYSTEM_OVERVIEW_2025-11-11.md
ontology/: kairoscope.schema.yaml
src/kairoscope/: __init__.py  cli.py  db.py  key_manager.py  policy.py  provenance.py  sbom.py  slsa.py  tpm_key_manager.py
src/kairoscope.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: comprehensive_test_data.txt  conftest.py  test_capture_sign_export.py  test_db.py  test_policy.py  test_sbom_slsa.py
